# direclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  run_loop.sh  run_loop_refactor.sh  shell.nix
.github/: release-notes-template.md
src/: cli.rs  commands.rs  config.rs  function_bridge.rs  lib.rs  orchestrator.rs  provider.rs  queue.rs  runtime.rs  slack.rs  workflow.rs
src/app/: cli.rs  (+5 more)
tests/: AGENTS.md  app_boundary_module.rs  app_command_dispatch_module.rs  app_command_handlers_agents.rs  app_command_handlers_auth.rs  app_command_handlers_channel_profiles.rs  app_command_handlers_channels.rs  app_command_handlers_chat.rs  app_command_handlers_module.rs  app_command_handlers_orchestrators.rs  app_command_handlers_update.rs  app_command_handlers_workflows.rs  app_command_support.rs  app_schedule_parsing_module.rs  auth_sync_cli.rs  binary_bootstrap.rs  channels_boundary_module.rs  channels_slack_api_module.rs  channels_slack_auth_module.rs  channels_slack_cursor_store_module.rs  channels_slack_ingest_module.rs  channels_slack_module.rs  chat_integration.rs  cli_command_surface.rs  config_error_module.rs  config_examples.rs  config_local_llm_validation.rs  config_memory_validation.rs  config_module_layout.rs  config_orchestrators_registry_module.rs  config_save_module.rs  config_typing_foundations.rs  docs_compat_and_command_surface.rs  docs_phase00_baseline.rs  docs_phase06_hardening.rs  file_semantics.rs  library_module_layout.rs  local_llm_model_store_module.rs  memory_domain_module.rs  memory_paths_module.rs  (+75 more)
(+201 files in other folders)
