[package]
name = "direclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
crossterm = "0.28"
ratatui = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
doctest = false
